--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,17 @@
   <meta http-equiv="Cache-control" content="max-age=0, no-cache, no-store, must-revalidate">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon" href="<%= BASE_URL %>images/favicon-96x96.png">
+  <meta property="og:image" content="<%= BASE_URL %>images//openGraphImage.jpg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>images/apple-touch-icon.png">
   <meta name="author" content="Patrik Huebner, www.patrik-huebner.com">
-  <title>
-    <%= htmlWebpackPlugin.options.title %>
-  </title>
+  <title>Net Art Marathon</title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    <!-- <%= htmlWebpackPlugin.options.title %> -->
+    <strong>We're sorry but Net Art Marathon doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
 </body>
